cabal-version:      >= 1.18
build-type:         Simple
name:               debug
version:            0.0.2
license:            BSD3
license-file:       LICENSE
category:           Development, Debugging
author:             Neil Mitchell <ndmitchell@gmail.com>
maintainer:         Neil Mitchell <ndmitchell@gmail.com>
copyright:          Neil Mitchell 2017-2018
synopsis:           Simple trace-based debugger
description:
    An easy to use debugger for viewing function calls and intermediate variables.
    To use, annotate the function under test, run the code, and view the generated web page.
    Full usage instructions are at "Debug".
homepage:           https://github.com/ndmitchell/debug
bug-reports:        https://github.com/ndmitchell/debug/issues
tested-with:        GHC==8.2.2, GHC==8.0.2
extra-doc-files:
    CHANGES.txt
    README.md

data-files:
    html/debug.html
    html/debug.js

source-repository head
    type:     git
    location: https://github.com/ndmitchell/debug.git

library
    default-language: Haskell2010
    hs-source-dirs:   src
    build-depends:
        base == 4.*,
        bytestring,
        aeson,
        containers,
        ghc-prim,
        extra,
        deepseq,
        directory,
        hashable,
        template-haskell,
        open-browser,
        text,
        uniplate,
        unordered-containers,
        js-jquery,
        prettyprinter,
        prettyprinter-compat-ansi-wl-pprint,
        vector

    exposed-modules:
        Debug
        Debug.Record
        Debug.Util

    other-modules:
        Debug.Variables
        Paths_debug

test-suite debug-test
    default-language: Haskell2010
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: test

    build-depends:
        base == 4.*,
        directory,
        extra,
        filepath,
        debug
